--- a/todoapp.cfg
+++ b/todoapp.cfg
@@ -1,9 +1,11 @@
 import os
-HDP_URL = os.environ['HDP_URL'] if os.environ.has_key('HDP_URL') else '127.0.0.1'
-HDP_TABLE = os.environ['OPENSHIFT_APP_NAME'] if os.environ.has_key('OPENSHIFT_APP_NAME') else 'todos'
-SECRET_KEY = '\xfb\x12\xdf\xa1@i\xd6>V\xc0\xbb\x8fp\x16#Z\x0b\x81\xeb\x16'
-IP = os.environ['OPENSHIFT_PYTHON_IP'] if os.environ.has_key('OPENSHIFT_PYTHON_IP') else '127.0.0.1'
-PORT = int(os.environ['OPENSHIFT_PYTHON_PORT']) if os.environ.has_key('OPENSHIFT_PYTHON_PORT') else 8080
-APP_NAME = os.environ['OPENSHIFT_APP_NAME'] if os.environ.has_key('OPENSHIFT_APP_NAME') else 'todos'
 DEBUG = True
 PROPAGATE_EXCEPTIONS = True
+HBASE_HOST = os.environ.get('HBASE_HOST', '127.0.0.1')
+HBASE_PORT = int(os.environ.get('HBASE_PORT', 9090))
+HBASE_TABLE = os.environ.get('HBASE_TABLE_NAME', os.environ.get('OPENSHIFT_APP_NAME', 'todos'))
+APP_NAME = os.environ.get('OPENSHIFT_APP_NAME', 'todos')
+HOST_NAME = os.environ.get('OPENSHIFT_APP_DNS', 'localhost')
+IP = os.environ.get('OPENSHIFT_PYTHON_IP', '127.0.0.1')
+PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT', 8080))
+SECRET_KEY = os.environ.get('SECRET_KEY', '\xfb\x12\xdf\xa1@i\xd6>V\xc0\xbb\x8fp\x16#Z\x0b\x81\xeb\x16')
